[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Fishing/GameContainerController.gd" type="Script" id=2]
[ext_resource path="res://Resources/Audio/Sfx/co_cartoon_descend_knocks_wood_delicate_tip_toes_002_027.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/Audio/Sfx/little_robot_sound_factory_Jingle_Win_Synth_00.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.356863, 0.160784, 1 )

[node name="FishingGameViewportContainer" type="ViewportContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -482.022
margin_top = 122.348
margin_right = -156.022
margin_bottom = 431.348
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 326, 329 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true
gui_disable_input = true

[node name="EntryTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 150 )
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.235294, 0.235294, 1 )
text = "FISH"

[node name="LossAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.33

[node name="WinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.33
[connection signal="timeout" from="EntryTimer" to="." method="destroy_after_timer"]
